# passman

./: .env  .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/cmd/: mod.rs
src/database/: mod.rs
src/manager/: mod.rs
src/utils/: mod.rs
