[package]
name = "passman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
clap = { version = "4.4.12", features = ["derive"] }
crypto = "0.5.1"
digest = "0.10.7"
dotenv = "0.15.0"
rand = "0.8.5"
serde = "1.0.194"
sha2 = "0.10.8"
sqlx = { version = "0.7", features = [ "sqlite", "runtime-tokio", "tls-native-tls" ] }
tokio = { version = "1.35.1", features = ["full"] }
